--- a/tciOrg/force-app/main/default/pages/No_Lapse_Statement.page
+++ b/tciOrg/force-app/main/default/pages/No_Lapse_Statement.page
@@ -23,10 +23,10 @@
     </head>
     <body>
     <div class="page-break">
-        <img alt="" src="https://c.na15.content.force.com/servlet/servlet.ImageServer?id=015i0000004PTT0&oid=00Di0000000JElI&lastMod=1411371346000" width="106" height="95"></img></div>
+        <img alt="" src="https://tci-agents-dev-ed--c.documentforce.com/servlet/servlet.FileDownload?file=0150H00000HYhAM" width="150" height="100"></img></div>
     <apex:form ><p><b>Regarding Policy Number:</b> {!Policy__c.Name}</p>
     
-    <p><h3>NO LAPSE STATEMENT</h3></p>
+    <p><h3 style="text-align:center;color:black;">NO LAPSE STATEMENT</h3></p>
     
     We Top Choice Insurane Agency regarding regarding the named insured of the above policy,
     effective <i><apex:outputText value=" {0,date,MM/dd/yyyy}"> <apex:param value="{!Policy__c.Effective_Date__c}" /> </apex:outputText></i>, warrant that there have been no lapse in coverage,
